working on Zeek 4.0.0-rc2 compatibility

--- a/tests/btest.cfg
+++ b/tests/btest.cfg
@@ -11,6 +11,6 @@ TZ=UTC
 LC_ALL=C
 TRACES=%(testbase)s/Traces
 TMPDIR=%(testbase)s/.tmp
-BRO_PLUGIN_PATH=%(testbase)s/../build
-BRO_SEED_FILE=`bro-config --bro_dist`/testing/btest/random.seed
-TEST_DIFF_CANONIFIER=`bro-config --bro_dist`/testing/scripts/diff-canonifier
+ZEEK_PLUGIN_PATH=%(testbase)s/../build
+ZEEK_SEED_FILE=`zeek-config --zeek_dist`/testing/btest/random.seed
+TEST_DIFF_CANONIFIER=`zeek-config --zeek_dist`/testing/scripts/diff-canonifier
